# tickerscope-mcp

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tickerscope_mcp/: __init__.py  errors.py  tools.py
src/tickerscope_mcp/tools/: __init__.py  chart.py  lists.py  stock.py
tests/: __init__.py  conftest.py  test_errors.py  test_server.py  test_smoke.py  test_tools.py
