[project]
name = "tickerscope-mcp"
version = "0.1.0"
description = "MCP server for MarketSurge financial data via TickerScope"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1,<4",
    "tickerscope",
]

[project.scripts]
tickerscope-mcp = "tickerscope_mcp:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "radon>=6.0.1",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "vulture>=2.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.uv.sources]
tickerscope = { git = "https://github.com/major/tickerscope" }
